# vigil-echo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: index.html
src/: analyze.rs  collect.rs  init.rs  main.rs  paths.rs  pulse.rs  signals.rs  state.rs  stats.rs  status.rs
