[package]
name = "vigil-echo"
version = "0.1.0"
edition = "2021"
description = "Metacognitive monitoring for AI self-evolution"
license = "AGPL-3.0-only"
repository = "https://github.com/dnacenta/vigil-echo"
keywords = ["claude", "claude-code", "ai", "metacognition", "llm"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
